# llmpal

./: .llmpal.json  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: ci.yml
examples/: .llmpal.json
src/: app.rs  config.rs  lib.rs  llm.rs  main.rs  spinner.rs  utils.rs
tests/: llmpal_test.rs
