[package]
name = "llmpal"
version = "0.1.0"
edition = "2024"
exclude = [
    "tests/*",
]

[dependencies]
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.20.0"
mockito = "1.6.1"