[package]
name = "llmpal"
version = "0.4.0"
edition = "2024"
exclude = [
    "tests/*",
]
repository = "https://github.com/00dev-org/llmpal"

[dependencies]
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.142"
clap = { version = "4.5.42", features = ["derive"] }

[dev-dependencies]
tempfile = "3.20.0"
mockito = "1.7.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
